# yt2pptx

./: LICENSE  README.md  pyproject.toml  yt2pptx.py
yt2pptx/: cli.py  pptx_utils.py  video_utils.py
