[tool.poetry]
name = "yt2pptx"
version = "0.1.0"
description = "A tool to convert YouTube videos into PowerPoint presentations."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.2.1"
imagehash = "^4.3.2"
python-pptx = "^1.0.2"
yt-dlp = "^2025.5.22"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
